@startuml

interface IDrawable<ShapeType> {
  +draw(target : RenderTarget)
  +IDrawable(...)
}

interface IUpdatable<StateType> {
  +update(delta : float)
  +reset()
  +IUpdatable(initial_state : StateType)
}

interface IAnimatable<VelocityType, StateType, ShapeType> {
  +update(delta : float)
  +IAnimatable(initial_velocity : VelocityType, initial_state : StateType)
}

interface ICollideable {
  +isColliding(candidate : ICollideable) : bool
}

class Wall {
  +Wall(position : Vector2<float>, size : Vector2<float>)
}

class Score {
  +update(delta : float)
  +increment_score()
  +Score(font : Font, position : Vector2<float>)
}

class Paddle {
  +move_up()
  +move_down()
  +move_stop()
  +Paddle(initial_position : Vector2<float>)
}

class Ball {
  +bounce_x()
  +bounce_y()
  +Ball(initial_position : Vector2<float>)
}

class Game {
  +Game()
}

IUpdatable <-- IAnimatable
IDrawable <-- IAnimatable

ICollideable <.. Wall

IDrawable <.. Score
IUpdatable <.. Score

IAnimatable <.. Paddle
ICollideable <.. Paddle

IAnimatable <.. Ball
ICollideable <.. Ball

@enduml
